--- a/KidsAR-Android/app/src/main/res/values/strings.xml
+++ b/KidsAR-Android/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">KidsAR</string>
+    <string name="alertString">Alert</string>
+    <string name="noInternet">No Internet Connection!</string>
     <string name="kidLabel">Please Tell Us Your Name</string>
     <string name="copyrights">Copyright © 2018 Deemsys Inc. All Right Reserved.</string>
 </resources>
