--- a/KidsAR-Android/app/src/main/res/values/strings.xml
+++ b/KidsAR-Android/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="alertmessage">Hope you enjoyed our app! Would you like to rate us?</string>
     <string name="alertpurchase">Would you like to purchase this product?</string>
     <string name="nointernet_message">Make sure your device is connected to the internet.</string>
+    <string name="media_mute_alert">For the application to work correctly, you must increase ‘Media Volume’. If you did not , you can not hear the music.</string>
+    <string name="plane_message">Point your device to a surface with detailed texture.</string>
 
 
 </resources>
