K,P,Q models,banner images,video updated.

--- a/KidsAR-Android/app/src/main/res/values-v21/strings.xml
+++ b/KidsAR-Android/app/src/main/res/values-v21/strings.xml
@@ -20,5 +20,5 @@
     <string name="alertSuccess">Success</string>
     <string name="welcometext">Welcome to </string>
     <string name="welcometext2">Kids AR</string>
-    <string name="welcomesubtext">Learn alphabets and explore various fruits, vegetables, animals, and birds using augmented reality</string>
+    <string name="welcomesubtext">Learn alphabets and explore various fruits, vegetables, animals and birds using augmented reality</string>
 </resources>
